Ensure debug text color is defined (was not set in dark mode)

--- a/admin/style/scss/partials/_debug.scss
+++ b/admin/style/scss/partials/_debug.scss
@@ -5,6 +5,7 @@
   top: 0;
   width: 100%;
   height: 4px;
+  color: var(--debug-color);
   background: var(--debug-background);
 
   div {
